@@ -511,20 +511,11 @@ void ap_abstract1_change_environment_with(ap_manager_ptr man,
 void ap_abstract1_minimize_environment_with(ap_manager_ptr man,
 					 [ref]struct ap_abstract1_t* a)
      quote(call,"{\n\
-  ap_environment_t* env = a->env; \n\
-  ap_environment_copy(env); /* to protect it */ \n\
-  ap_abstract1_t res = ap_abstract1_minimize_environment(man,true,a); \n\
+  ap_abstract1_t res = ap_abstract1_minimize_environment(man,true,a);\n\
   value v = Field(_v_a,0);\n\
   *((ap_abstract0_ptr *) Data_custom_val(v)) = res.abstract0;\n\
-  if (res.env==env){\n\
-    ap_environment_free(env);\n\
-  } \n\
-  else { \n\
-    Begin_root(v); \n\
-    v = camlidl_apron_environment_ptr_c2ml(&res.env); \n\
-    Store_field(_v_a,1,v); \n\
-    End_roots(); \n\
-  } \n\
+  v = Field(_v_a,1);\n\
+  *((ap_environment_ptr *) Data_custom_val(v)) = res.env;\n\
 }")
      quote(dealloc,"I0_CHECK_EXC(man)");
 
@@ -534,20 +525,11 @@ void ap_abstract1_rename_array_with(ap_manager_ptr man, [ref]struct ap_abstract1
      quote(call,"\n\
 if (v3!=v4) caml_failwith(\"Abstract1.rename_array_with: arrays of different size\");\n\
 {\n\
-  ap_environment_t* env = a->env; \n\
-  ap_environment_copy(env); /* to protect it */ \n\
   ap_abstract1_t res = ap_abstract1_rename_array(man,true,a,v1,v2,v3);\n\
   value v = Field(_v_a,0);\n\
   *((ap_abstract0_ptr *) Data_custom_val(v)) = res.abstract0;\n\
-  if (res.env==env){\n\
-    ap_environment_free(env);\n\
-  } \n\
-  else { \n\
-    Begin_root(v); \n\
-    v = camlidl_apron_environment_ptr_c2ml(&res.env); \n\
-    Store_field(_v_a,1,v); \n\
-    End_roots(); \n\
-  } \n\
+  v = Field(_v_a,1);\n\
+  *((ap_environment_ptr *) Data_custom_val(v)) = res.env;\n\
 }")
       quote(dealloc,"I0_CHECK_EXC(man)");
 
@@ -600,20 +582,11 @@ void ap_abstract1_expand_with(ap_manager_ptr man, [ref]struct ap_abstract1_t* a,
 			   [size_is(v3)]ap_var_t* v2,
 			   int v3)
      quote(call,"{\n\
-  ap_environment_t* env = a->env; \n\
-  ap_environment_copy(env); /* to protect it */ \n\
   ap_abstract1_t res = ap_abstract1_expand(man,true,a,v1,v2,v3);
   value v = Field(_v_a,0);\n\
   *((ap_abstract0_ptr *) Data_custom_val(v)) = res.abstract0;\n\
-  if (res.env==env){\n\
-    ap_environment_free(env);\n\
-  } \n\
-  else { \n\
-    Begin_root(v); \n\
-    v = camlidl_apron_environment_ptr_c2ml(&res.env); \n\
-    Store_field(_v_a,1,v); \n\
-    End_roots(); \n\
-  } \n\
+  v = Field(_v_a,1);\n\
+  *((ap_environment_ptr *) Data_custom_val(v)) = res.env;\n\
 }")
      quote(dealloc,"I0_CHECK_EXC(man)");
 
@@ -621,20 +594,11 @@ void ap_abstract1_fold_with(ap_manager_ptr man, [ref]struct ap_abstract1_t* a,
 			 [size_is(v2)]ap_var_t* v1,
 			 int v2)
      quote(call,"{\n\
-  ap_environment_t* env = a->env; \n\
-  ap_environment_copy(env); /* to protect it */ \n\
   ap_abstract1_t res = ap_abstract1_fold(man,true,a,v1,v2);
   value v = Field(_v_a,0);\n\
   *((ap_abstract0_ptr *) Data_custom_val(v)) = res.abstract0;\n\
-  if (res.env==env){\n\
-    ap_environment_free(env);\n\
-  } \n\
-  else { \n\
-    Begin_root(v); \n\
-    v = camlidl_apron_environment_ptr_c2ml(&res.env); \n\
-    Store_field(_v_a,1,v); \n\
-    End_roots(); \n\
-  } \n\
+  v = Field(_v_a,1);\n\
+  *((ap_environment_ptr *) Data_custom_val(v)) = res.env;\n\
 }")
      quote(dealloc,"I0_CHECK_EXC(man)");
 
@@ -720,6 +684,22 @@ let substitute_linexpr_with man abs dim expr odest =\n\
 let substitute_texpr_with man abs dim expr odest =\n\
   substitute_texpr_array_with man abs [|dim|] [|expr|] odest\n\
 ")
+
+quote(MLI,"(** Unification of 2 abstract values on their least common environment *)")
+struct ap_abstract1_t ap_abstract1_unify(ap_manager_ptr man, [ref]struct ap_abstract1_t* a1, [ref]struct ap_abstract1_t* a2)
+     quote(call,"_res = ap_abstract1_unify(man,false,a1,a2);")
+     quote(dealloc,"I0_CHECK_EXC(man)");
+quote(MLI,"(** Side-effect version *)")
+void ap_abstract1_unify_with(ap_manager_ptr man, [ref]struct ap_abstract1_t* a1, [ref]struct ap_abstract1_t* a2)
+	 quote(call,"\
+{\n\
+  ap_abstract1_t res = ap_abstract1_unify(man,true,a1,a2);\n\
+  value v = Field(_v_a1,0);\n\
+  *((ap_abstract0_ptr *) Data_custom_val(v)) = res.abstract0;\n\
+  v = Field(_v_a1,1);\n\
+  *((ap_environment_ptr *) Data_custom_val(v)) = res.env;\n\
+}")
+     quote(dealloc,"I0_CHECK_EXC(man)");
 
 quote(ML,"\n\
 let print fmt a =\n\
